  (Contributed by Robbert Krebbers).
- Arguments to __builtin_annot() that are compile-time constants
  are now replaced by their (integer or float) value in the annotation
  generated in the assembly file.
- ARM and PowerPC ports: more efficient access to function parameters
  that are passed on the call stack.
- ARM port; slightly better code generated for some indirect memory
  accesses.

Release 1.12.1, 2013-01-29
==========================

Ported to Coq 8.4pl1.  Otherwise functionally identical to release 1.12.


Release 1.12, 2013-01-11
========================

Improvements in confidence:
- Floating-point literals are now parsed and converted to IEEE-754 binary
  FP numbers using a provably-correct conversion function implemented on
  top of the Flocq library.

Language semantics:
- Comparison between function pointers is now correctly defined
  in the semantics of CompCert C (it was previously undefined behavior,
  by mistake).
- Bit-fields of 'enum' type are now treated as either unsigned or signed,
  whichever is able to represent all values of the enum.
  (Previously: always signed.)
- The "&&" and "||" operators are now primitive in CompCert C and are
  given explicit semantic rules, instead of being expressed in terms
  of "_ ? _ : _" as in previous CompCert releases.
- Added a "Ebuiltin" expression form (invocation of built-in function)
  to CompCert C, and a "Sbuiltin" statement form to Clight.
  Used it to simplify the encoding of annotations, memcpy, and volatile
  memory accesses.

Performance improvements:
- Better code generated for "&&" and "||" operators.
- More aggressive elimination of conditional branches during constant
  propagation, taking better advantage of inferred constants.

Language features:
- By popular demand, "asm" statements for inline assembly are now supported
  if the flag -finline-asm is set.  Use with extreme caution, as the
  semantic preservation proof assumes these statements have no effect
  on the processor state.
